Mapping jdk17 foreign incubator types to release foreign types